--- a/makeuphara-front-end/src/index.css
+++ b/makeuphara-front-end/src/index.css
@@ -7,6 +7,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* 링크의 색상 및 밑줄 없애기 */
+a {
+  color: inherit;
+  text-decoration: none !important;
+}
+
+li {
+  list-style-type: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
